# ao3-disco-ranking

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  build.py  guild.yml  index.html  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: code_quality_checks.yml  docs_publish.yml
ao3_disco_ranking/: __init__.py  train.py  types.py  utils.py
ao3_disco_ranking/ao3/: __init__.py  db.py  utils.py  work.py
ao3_disco_ranking/models/: __init__.py  base.py  deepsecond.py  embedding.py  features.py  first.py  second.py
ao3_disco_ranking/query/: __init__.py  embedding_ranker.py  graph_ranker.py  query_handler.py  tags_filter.py
ao3_disco_ranking/scripts/: app.html  app.py  build.py
benchmark/: index.html
docs/: benchmark.md  index.md
notebooks/: api.ipynb  demo.ipynb  instructions.ipynb
preprocessing/: download.py  make_dataset.py
search/: search_index.json
tests/: test_ao3_disco_ranking.py  test_utils.py
tests/ao3/: test_work.py
tests/models/: test_base.py
tests/query/: test_graph_ranker.py  test_query_handler.py  test_tags_filter.py
