[tool]

[tool.poetry]
name = "ao3_disco_ranking"
version = "0.0.0"
homepage = "https://github.com/k15z/ao3-disco-ranking"
description = "This repository hosts the ranking models used by the AO3 Discovery Engine."
authors = ["Kevin Alex Zhang <hello@kevz.dev>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
include = [
    "LICENSE",
    "ao3_disco_ranking/py.typed"
]

[tool.poetry.dependencies]
python = "^3.8"
importlib_metadata = "^3.4.0"
numpy = "^1.24.2"
tqdm = "^4.64.1"
scikit-learn = "^1.2.1"
xgboost = "^1.7.3"
torch = "^1.13.1"
jupyter = "^1.0.0"
unidecode = "^1.3.6"
pymysql = "^1.0.2"

[tool.poetry.dev-dependencies]
mkdocs-material = "^6.1.5"
pytest = "^6.0"
pytest-cov = "^2.10.1"

pylint = "^2.6.0"
black = "22.3.0"
mypy = "0.960"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
guildai = "^0.8.2"
jupyter = "^1.0.0"
types-requests = "^2.28.11.14"
types-pymysql = "^1.0.19.4"

[tool.black]
line-length=100

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=ao3_disco_ranking --cov-branch --cov-report term-missing  -vv --color=yes --cov-fail-under 50"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
omit = [
    "ao3_disco_ranking/models/*.py",
    "ao3_disco_ranking/scripts/*.py",
]
